fixed lightdark mode

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -125,8 +125,22 @@ header {
   display: block;
   cursor: pointer;
   text-align: center;
-  background-color: rgb(130, 130, 130);
+  background-color: rgb(80, 80, 80);
   color: white;
+  font-size: 18px;
+  font-family: 'Mandali', sans-serif;
+  transition: 0.25s;
+  text-decoration: none;
+  border: 0.001em solid rgb(220, 220, 220);
+}
+
+.Inactive_Link_dark {
+  width: auto;
+  display: block;
+  cursor: pointer;
+  text-align: center;
+  background-color: red;
+  color: yellow;
   font-size: 18px;
   font-family: 'Mandali', sans-serif;
   transition: 0.25s;
@@ -143,7 +157,23 @@ header {
   display: block;
   cursor: pointer;
   text-align: center;
+  transition: .5s;
+  font-size: 18px;
+  font-family: 'Mandali', sans-serif;
   background-color: white;
+  border-top: 0.001em solid rgb(130, 130, 130);
+  border-bottom: 0.001em solid rgb(130, 130, 130);
+  color: black;
+  text-decoration: none;
+  font-weight: 550;
+}
+
+.Active_Link_dark {
+  width: auto;
+  display: block;
+  cursor: pointer;
+  text-align: center;
+  background-color: yellow;
   transition: .5s;
   font-size: 18px;
   font-family: 'Mandali', sans-serif;
